Fixed momentary file ipload visibility

--- a/css/custom.css
+++ b/css/custom.css
@@ -9,3 +9,6 @@
   grid-column-start: 1;
   grid-column-end: 3;
 }
+.imageUploadContainer {
+  display: none;
+}
